--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/essentialRequirementsParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/essentialRequirementsParticipants.yml
@@ -17,7 +17,7 @@ type: list
 depends:
   - "on": "lot"
     being:
-      - digital-specialists
+      - user-research-participants
 
 validations:
   -
