--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/essentialRequirementsSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/essentialRequirementsSpecialists.yml
@@ -17,7 +17,7 @@ type: list
 depends:
   - "on": "lot"
     being:
-      - user-research-participants
+      - digital-specialists
 
 validations:
   -
