--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/culturalWeightingOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/culturalWeightingOutcomes.yml
@@ -1,15 +1,14 @@
 id: culturalWeighting
 question: 'Cultural fit'
 question_advice: > 
-  Cultural fit is how well you and the individual or team will work together. If the supplier’s 
-  values and behaviour are similar to your organisation’s, they should be a good cultural fit.
+  Cultural fit is how well you and the supplier will work together. 
+  If the supplier’s values and behaviour are similar to your organisation’s, they should be a good cultural fit.
 hint: 'This can be between 5% and 20%'
 
 depends:
   - "on": lot
     being:
       - digital-outcomes
-      - digital-specialists
 
 type: percentage
 limits:
