--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/researchAddress.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/researchAddress.yml
@@ -2,9 +2,11 @@ name: Research location
 question: Specific place where the research will happen
 question_advice: |
   Include:
-   * the town or city where the research will happen
-   * more than one address if appropriate
-   * a description of the research envrionment, eg whether the research will happen in a lab, at a participants home, or in a neutral location like a community centre
+  
+   - the town or city where the research will happen
+   - more than one address if appropriate
+   - a description of the research envrionment, eg whether the research will happen in a lab, at a participants home, 
+     or in a neutral location like a community centre
 type: textbox_large
 max_length_in_words: 100
 depends:
