--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/successCriteriaParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/successCriteriaParticipants.yml
@@ -9,11 +9,12 @@ question_advice: |
   eg ‘proposed approach and methodology - 15 points’
   
   Suggested criteria
-  * The proposed approach and methodology
-  * How the approach or solution meets your business or policy goal
-  * How the approach or solution meets user needs
-  * Estimated timeframes for the work
-  * How they’ve identified risks and dependencies and offered approaches to manage them
+  
+  - The proposed approach and methodology
+  - How the approach or solution meets your business or policy goal
+  - How the approach or solution meets user needs
+  - Estimated timeframes for the work
+  - How they’ve identified risks and dependencies and offered approaches to manage them
   
 type: list
 number_of_items: 20
