--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/locationSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/locationSpecialists.yml
@@ -1,10 +1,12 @@
-name: Where you want the specialist to work
+name: Region
+question: Where you want the specialist to work
 id: location
-question: |
+question_advice: |
   This should be the primary location where they’ll be working.
-  
-  Suppliers have said where they’ll provide services.
-hint: "[View region map (PDF, 262KB)](https://geoportal.statistics.gov.uk/Docs/Maps/Regions_(Eng)_2011_map.pdf)"
+
+  Suppliers have said where they’ll provide specialists.
+
+  [View region map (PDF, 262KB)](https://geoportal.statistics.gov.uk/Docs/Maps/Regions_(Eng)_2011_map.pdf)
 type: radios
 options:
   - label: "Scotland"
