Add question advice keys
Add it in one case and stop using `hint` in another case.

--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/questionAndAnswerSessionDetails.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/questionAndAnswerSessionDetails.yml
@@ -1,6 +1,6 @@
 name: Question and answer session details
 question: Question and answer session details
-hint: |
+question_advice: |
 
   You must include:
 
