--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/culturalFitCriteriaSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/culturalFitCriteriaSpecialists.yml
@@ -1,19 +1,20 @@
 name: Cultural fit criteria
 id: culturalFitCriteria
-question: Proposed solution evaluation criteria
+question: Cultural fit evaluation criteria
 question_advice: |
   Cultural fit is how well you and the individual or team will work together. If the supplier’s values and behaviour
   are similar to your organisation’s, they should be a good cultural fit.
-  
-  If you want to add ‘points’ to the individual cultural fit criteria, you must include them here, 
-  eg ‘transparent and collaborative when making decisions - 15 points’
-  
+
+  You must tell suppliers if you want to score individual criteria.
+
+  Read more about [how to set evaluation criteria](https://www.gov.uk/guidance/how-to-set-your-evaluation-criteria-when-buying-digital-outcomes-and-specialists-services#giving-points-to-individual-criteria).
+
   Suggested criteria
-  
+
   - Work as a team with our organisation and other suppliers
   - Transparent and collaborative when making decisions
   - Have a no-blame culture and encourage people to learn from their mistakes
-  
+
 type: list
 number_of_items: 20
 depends:
