--- a/frameworks/digital-outcomes-and-specialists/manifests/display_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/display_brief.yml
@@ -17,7 +17,7 @@
   questions:
     - backgroundInformation
     - outcome
-    - userNeeds
+    - endUsers
     - earlyMarketEngagement
     - workAlreadyDone
     - existingTeamOutcomes
