Update content for brief responses

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief_response.yml
@@ -1,11 +1,12 @@
 -
   name: Apply to an opportunity
   editable: True
+  description: |
+    Buyers will use the information suppliers provide here to create a shortlist.
   questions:
     - respondToEmailAddress
     - essentialRequirements
     - niceToHaveRequirements
-    - availability
+    - availabilityOutcomes
+    - availabilitySpecialists
     - dayRate
-    - specialistName
-    - userParticipantResponse
