--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/niceToHaveRequirements.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/niceToHaveRequirements.yml
@@ -1,6 +1,7 @@
 name: Nice-to-have requirements
-question: Do you fulfill the following nice-to-have requirements?
-hint: 'If you cannot meet all requirements, you may still be eligible for this work.'
+question: Do you have any of the nice-to-have skills and experience? 
+question_advice: |
+  Buyers will filter supplier applications based on the number of nice-to-have skills and experience they have. 
 type: boolean_list
 optional: true
 depends:
