--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/respondToEmailAddress.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/respondToEmailAddress.yml
@@ -1,6 +1,6 @@
 name: Email address
 question: Email address the buyer should use to contact you
-hint: All correspondence regarding your application for this opportunity will be sent to this address.
+hint: All communication about your application will be sent to this address.
 
 type: text
 limits:
