--- a/frameworks/digital-outcomes-and-specialists/questions/clarification_question/answer.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/clarification_question/answer.yml
@@ -1,5 +1,18 @@
-question: Answer
-name: Answer
+name: Your answer
+question: Your answer
+question_advice: |
+  **Publishing answers to supplier questions**
+  
+  You must:
+  
+  - answer all supplier questions
+  - give an individual response to each question even when questions are similar
+  - publish 1 answer at a time
+  - answer all questions at least 1 working day before the deadline to give suppliers time to decide if the work is
+    right for them
+  - answer questions within 2 to 3 working days
+  - answer questions more frequently when the deadline is approaching
+
 type: textbox_large
 max_length_in_words: 100
 validations:
