--- a/frameworks/g-cloud-8/manifests/declaration.yml
+++ b/frameworks/g-cloud-8/manifests/declaration.yml
@@ -1,6 +1,13 @@
 -
   name: G-Cloud 8 essentials
   editable: True
+  description: >
+    You must make this declaration to apply to G-Cloud 8. You can come back and change your answers at any time before
+    5pm, 21 June 2016.
+    
+    You must be able to truthfully answer 'yes' to every question under ‘G-Cloud 8 Essentials'
+    for your bid to be considered eligible. If you can't answer 'yes' to every
+    question in this section, it's very unlikely that your bid will be accepted.
   questions:
     - PR2
     - PR5
@@ -43,6 +50,17 @@
 -
   name: Grounds for mandatory exclusion
   editable: True
+  description: >
+    You must be able to truthfully answer 'no' to every question under 'Grounds for mandatory exclusion' for your bid to be
+    considered eligible. If you can't answer 'no' to every question in this
+    section, it's very unlikely that your bid will be accepted.
+
+
+    In questions [[conspiracyCorruptionBribery]] to [[organisedCrime]], 'anyone who represents your organisation' includes members of your group of economic
+    operators, their proposed subcontractors, and any directors, partners, or
+    any other person who has powers of representation, decision or control.
+    Check that your organisation complies with [Regulation 57(1) of the Public
+    Contracts Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/regulation/57/made).
   questions:
     - SQ2-1abcd
     - SQ2-1e
@@ -51,6 +69,29 @@
 -
   name: Grounds for discretionary exclusion
   editable: True
+  description: >
+    You must be able to truthfully answer 'no' to every question under 'Grounds for discretionary exclusion'
+    for your bid to be considered eligible. If you can't answer 'no', your bid may not be accepted. If
+    you do answer 'yes', you must provide full details of any subsequent event or remedial action that
+    you think the Crown Commercial Service (CCS) should take into consideration. CCS will use the information
+    you provide to consider whether or not you will be able to proceed any further with this procurement.
+
+
+    In questions [[taxEvasion]] to [[misleadingInformation]], 'partner organisations' include members
+    of your group of economic operators or their proposed subcontractors.
+
+
+    CCS can also exclude you if you are guilty of serious
+    misrepresentation in providing any information referred to within
+    regulations
+    [23](http://www.legislation.gov.uk/uksi/2015/102/regulation/23/made),
+    [24](http://www.legislation.gov.uk/uksi/2015/102/regulation/24/made),
+    [25](http://www.legislation.gov.uk/uksi/2015/102/regulation/25/made),
+    [26](http://www.legislation.gov.uk/uksi/2015/102/regulation/26/made) or
+    [27](http://www.legislation.gov.uk/uksi/2015/102/regulation/27/made)
+    of the [Public Contracts Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/contents/made)
+    or if you fail to provide any such information it requests.
+
   questions:
     - SQ2-2a
     - SQ3-1a
