Removed 'to supplier questions'
Because its too easy to scan the first and last word of the sentence and get confused.

--- a/frameworks/digital-outcomes-and-specialists/questions/clarification_question/answer.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/clarification_question/answer.yml
@@ -1,7 +1,7 @@
 name: Your answer
 question: Your answer
 question_advice: |
-  **Publishing answers to supplier questions**
+  **Publishing answers**
   
   You must:
   
