Add terms of participation
Adding a question at the beginning.

In last commit, I added descriptions for the top of each page

--- a/frameworks/g-cloud-8/manifests/declaration.yml
+++ b/frameworks/g-cloud-8/manifests/declaration.yml
@@ -9,6 +9,7 @@
     for your bid to be considered eligible. If you can't answer 'yes' to every
     question in this section, it's very unlikely that your bid will be accepted.
   questions:
+    - termsOfParticipation
     - PR2
     - PR5
     - PR3
