--- a/frameworks/g-cloud-8/questions/declaration/PR2.yml
+++ b/frameworks/g-cloud-8/questions/declaration/PR2.yml
@@ -1,2 +1,2 @@
-question: "Do you accept the framework terms and conditions as set out in the Attachment 3 Framework Agreement and Call-Off Contract documents in [the supplier pack (ZIP, ???KB)](/suppliers/frameworks/g-cloud-8/g-cloud-8-supplier-pack.zip)?"
+question: "Do you accept the framework terms and conditions as set out in the Framework Agreement (attachment 2) and Call-Off Contract (attachment 3) of the supplier pack?"
 type: boolean
