New question names
Updating question names to match DOS - all the questions about using the 'tool'

--- a/frameworks/g-cloud-8/manifests/declaration.yml
+++ b/frameworks/g-cloud-8/manifests/declaration.yml
@@ -11,9 +11,9 @@
   questions:
     - termsOfParticipation
     - PR2
-    - PR5
-    - PR3
-    - PR4
+    - readUnderstoodGuidance
+    - understandTool
+    - understandHowToAskQuestions
     - SQ1-3
     - SQA2
     - SQA3
