Updating all the file names for G-Cloud essentials
Updating all the file names for the G-Cloud essentials page to be readable

--- a/frameworks/g-cloud-8/manifests/declaration.yml
+++ b/frameworks/g-cloud-8/manifests/declaration.yml
@@ -10,18 +10,18 @@
     question in this section, it's very unlikely that your bid will be accepted.
   questions:
     - termsOfParticipation
-    - PR2
+    - termsAndConditions
     - readUnderstoodGuidance
     - understandTool
     - understandHowToAskQuestions
-    - SQ1-3
-    - SQA2
-    - SQA3
-    - SQA4
-    - SQA5
-    - AQA3
-    - SQ5-1a
-    - SQC3
+    - servicesHaveOrSupport
+    - canProvideCloudServices
+    - hasSkillsAndResources
+    - accuratelyDescribed
+    - proofOfClaims
+    - MI
+    - employersInsurance
+    - equalityAndDiversity
 -
   name: About you
   editable: True
