--- a/frameworks/digital-outcomes-and-specialists/manifests/clarification_question.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/clarification_question.yml
@@ -1,5 +1,15 @@
 -
   name: Publish questions and answers
+  description: |
+    You must make sure that suppliers have access to the same information about the work.
+    This means all suppliers will have an equal opportunity to win the contract.
+    
+    You must publish all questions and answers.
+    
+    All published questions and answers will be public. They'll appear at the bottom of your published requirements
+    page.
+    
+    Read more about [how to manage supplier questions](https://www.gov.uk/guidance/how-to-answer-supplier-questions-on-the-digital-marketplace).
   editable: true
   questions:
     - question
