Restore supplierName question for outputting responses
This was removed in error yesterday and broke the csv file of responses generation.

--- a/frameworks/digital-outcomes-and-specialists/manifests/output_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/output_brief_response.yml
@@ -2,7 +2,8 @@
   name: View response to requirements
   questions:
     - supplierName
-    - availability
+    - availabilityOutcomes
+    - availabilitySpecialists
     - dayRate
     - niceToHaveRequirements
     - respondToEmailAddress
