--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/additionalTerms.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/additionalTerms.yml
@@ -1,7 +1,7 @@
 name: Additional terms and conditions
 question: Additional terms and conditions
 question_advice: |
-  You should use the [standard contract](https://www.gov.uk/guidance) unless your organisation needs to include additional terms and conditions.
+  You should use the [standard contract](https://www.gov.uk/guidance/digital-outcomes-and-specialists-templates-and-legal-documents) unless your organisation needs to include additional terms and conditions.
 
   Read about [how the terms and conditions work](https://www.gov.uk/guidance/terms-and-conditions-of-digital-marketplace-frameworks).
 optional: true
