--- a/frameworks/g-cloud-8/questions/declaration/MI.yml
+++ b/frameworks/g-cloud-8/questions/declaration/MI.yml
@@ -1,3 +1,2 @@
-question: "Do you confirm that you're prepared to provide all G-Cloud-related management information (MI) to CCS using the template in attachment 4 of [the supplier pack (ZIP, ???KB)](/suppliers/frameworks/g-cloud-8/g-cloud-8-supplier-pack.zip)?"
-hint: CCS use MI to report data on the spending made by public sector organisations.
+question: "Do you confirm that you’re prepared to provide all G-Cloud 8-related management information (MI) to CCS as outlined in the [framework agreement (ZIP, 3.2MB)](/suppliers/frameworks/g-cloud-8/files/g-cloud-8-supplier-pack.zip)?"
 type: boolean
