--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/niceToHaveRequirementsSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/niceToHaveRequirementsSpecialists.yml
@@ -14,8 +14,10 @@ question_advice: |
 
   [Read more about how to set evaluation criteria](https://www.gov.uk/guidance/how-to-set-your-evaluation-criteria-when-buying-digital-outcomes-and-specialists-services#giving-points-to-individual-criteria)
 
-  List the skills and experience you’d like the specialist to have,
-  eg experience working on government digital projects
+  List the skills and experience you’d like the supplier to have, eg:
+  
+  - experience working on government digital projects 
+  - start work 2 to 4 weeks before the latest start date
 list_item_name: 'nice-to-have requirement'
 number_of_items: 20
 optional: true
