All brief lots need early market engagement

--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/earlyMarketEngagement.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/earlyMarketEngagement.yml
@@ -8,6 +8,8 @@ depends:
   - "on": "lot"
     being:
       - digital-outcomes
+      - digital-specialists
+      - user-research-participants
 validations:
   -
     name: under_200_words
