Participants briefs require a written proposal.

--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/evaluationTypeParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/evaluationTypeParticipants.yml
@@ -6,6 +6,8 @@ question_advice: |
   
   You can only use the methods you choose here.
   
+  You must ask for a written proposal.
+  
   Read about [assessment methods](https://www.gov.uk/guidance/ways-to-assess-digital-outcomes-and-specialists-suppliers).
 type: checkboxes
 options:
