--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/essentialRequirementsParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/essentialRequirementsParticipants.yml
@@ -4,13 +4,16 @@ question: Essential skills and experience
 question_advice: |
   Suppliers who don’t have all the essential skills you list here will be automatically notified that their
   application was unsuccessful.
-  
-  List all the specific skills or experience the supplier must have, 
+
+  List all the specific skills or experience the supplier must have,
   eg have experience recruiting participants with low digital literacy.
-  
+
   You must tell suppliers if you want to score individual criteria.
-  
+
   [Read more about how to set evaluation criteria.](https://www.gov.uk/guidance/how-to-set-your-evaluation-criteria-when-buying-digital-outcomes-and-specialists-services#giving-points-to-individual-criteria)
+
+  **The supplier must:**
+
 list_item_name: 'essential requirement'
 number_of_items: 20
 type: list
