--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/niceToHaveRequirementsParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/niceToHaveRequirementsParticipants.yml
@@ -16,6 +16,9 @@ question_advice: |
 
   List the skills and experience you’d like the supplier to have,
   eg have experience recruiting users for government research
+
+  **The supplier can:**
+
 list_item_name: 'nice-to-have requirement'
 number_of_items: 20
 optional: true
