--- a/frameworks/g-cloud-8/questions/declaration/bankrupt.yml
+++ b/frameworks/g-cloud-8/questions/declaration/bankrupt.yml
@@ -1,4 +1,5 @@
-question: >
+question: |
   Please confirm whether, within the past 3 years, your organisation or any of your partner organisations has:
-    - been made bankrupt or the subject of insolvency or winding-up proceedings
+  
+  - been made bankrupt or the subject of insolvency or winding-up proceedings
 type: boolean
