--- a/frameworks/g-cloud-8/questions/declaration/confidentialInformation.yml
+++ b/frameworks/g-cloud-8/questions/declaration/confidentialInformation.yml
@@ -1,4 +1,5 @@
-question: >
+question: |
   Please confirm whether, within the past 3 years, your organisation or any of your partner organisations has:
-    - obtained confidential information that may give you undue advantages in the procurement procedure
+  
+  - obtained confidential information that may give you undue advantages in the procurement procedure
 type: boolean
