--- a/frameworks/g-cloud-8/questions/declaration/influencedContractingAuthority.yml
+++ b/frameworks/g-cloud-8/questions/declaration/influencedContractingAuthority.yml
@@ -1,4 +1,5 @@
-question: >
+question: |
   Please confirm whether, within the past 3 years, your organisation or any of your partner organisations has:
-    - unduly influenced the decision-making process of the contracting authority
+  
+  - unduly influenced the decision-making process of the contracting authority
 type: boolean
