--- a/frameworks/g-cloud-8/questions/declaration/licenceOrMemberRequired.yml
+++ b/frameworks/g-cloud-8/questions/declaration/licenceOrMemberRequired.yml
@@ -1,5 +1,6 @@
-question: >
-  Please confirm if, to provide the services specified in this procurement, it’s a legal requirement in the state where you’re established to be:
+question: |
+  Please confirm if, to provide the services specified in this procurement, it’s a legal requirement in the state 
+  where you’re established to be:
 type: radios
 options:
   - label: licensed
