--- a/frameworks/g-cloud-8/questions/declaration/misleadingInformation.yml
+++ b/frameworks/g-cloud-8/questions/declaration/misleadingInformation.yml
@@ -1,4 +1,5 @@
-question: >
+question: |
   Please confirm whether, within the past 3 years, your organisation or any of your partner organisations has:
-    - provided misleading information that may have an influence on decisions concerning framework exclusion, selection or award
+  
+  - provided misleading information that may have an influence on decisions concerning framework exclusion, selection or award
 type: boolean
