--- a/frameworks/g-cloud-8/questions/declaration/subcontracting.yml
+++ b/frameworks/g-cloud-8/questions/declaration/subcontracting.yml
@@ -6,4 +6,5 @@ options:
   - label: as a prime contractor, using third parties (subcontractors) to provide all services
   - label: as part of a consortium or special purpose vehicle, using members only to provide all services
   - label: as part of a consortium or special purpose vehicle, using third parties (subcontractors) to provide some services
-hint: Choose all that apply. Only include subcontractors whose products or services will be integral to the g-Cloud 8 services that you intend to provide.
+hint: Choose all that apply. Only include subcontractors whose products or services will be integral to the G-Cloud 8 
+      services that you intend to provide.
