Add number_of_items to brief-responses boolean lists
Makes the number_of_items for requirement responses match the max
number of requirements and adds the `number_of_items` field support
to the `boolean_list` schema generator.

--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/essentialRequirements.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/essentialRequirements.yml
@@ -3,6 +3,7 @@ question: Do you have the essential skills and experience?
 question_advice: If you don’t have all the essential skills and experience, you won’t be eligible for this opportunity.
 
 type: boolean_list
+number_of_items: 20
 depends:
   - "on": "lot"
     being:
