--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/niceToHaveRequirements.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/niceToHaveRequirements.yml
@@ -1,9 +1,12 @@
 name: Nice-to-have requirements
-question: Do you have any of the nice-to-have skills and experience? 
+question: Do you have any of the nice-to-have skills and experience?
 question_advice: |
-  Buyers will filter supplier applications based on the number of nice-to-have skills and experience they have. 
+  Buyers will filter supplier applications based on the number of nice-to-have skills and experience they have.
+
 type: boolean_list
+number_of_items: 20
 optional: true
+
 depends:
   - "on": "lot"
     being:
