[#118374227] Change 'availability' column name in supplier responses csv
Changing the question name to match the new question text.
Question name is not displayed anywhere except for the output CSV.

--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/availabilitySpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/availabilitySpecialists.yml
@@ -1,4 +1,4 @@
-name: Availability
+name: Date the specialist can start work
 id: availability
 question: When can the specialist start work?
 hint: 'eg 31/12/2016'
