--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/availabilityOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/availabilityOutcomes.yml
@@ -1,4 +1,4 @@
-name: Availability
+name: Date the supplier can start work
 id: availability
 question: When can the supplier start work?
 hint: 'eg 31/12/2016'
