[#118292307] Fix description typo in backgroundInformation

--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/backgroundInformation.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/backgroundInformation.yml
@@ -1,7 +1,7 @@
 name: Why the work is being done
 question: Why the work is being done
 question_advice: |
-  Describe the organistaion or policy goal the work supports, eg how a new law changes the way users receive 
+  Describe the organisation or policy goal the work supports, eg how a new law changes the way users receive 
   government payments.
   
   Include any important dates. You must say if you need the work to be done by a certain date.
